correção erro sinconização do backend com frontend